Add overview endpoint
